nobase_include_HEADERS = \
	opx/sdi_bus.h \
	opx/sdi_bus_api.h \
	opx/sdi_bus_framework.h \
	opx/sdi_driver_internal.h \
	opx/sdi_entity_info_internal.h \
	opx/sdi_fan_internal.h \
	opx/sdi_i2c.h \
	opx/sdi_i2c_bus_api.h \
	opx/sdi_i2c_bus_framework.h \
	opx/sdi_io_port_api.h \
	opx/sdi_led_internal.h \
	opx/sdi_media_internal.h \
	opx/sdi_nvram_internal.h \
	opx/sdi_pin.h \
	opx/sdi_pin_bus_api.h \
	opx/sdi_pin_bus_framework.h \
	opx/sdi_pin_group.h \
	opx/sdi_pin_group_bus_api.h \
	opx/sdi_pin_group_bus_framework.h \
	opx/sdi_pld_upgrade_internal.h \
	opx/sdi_resource_internal.h \
	opx/sdi_smartfusion_io.h \
	opx/sdi_smartfusion_io_bus_api.h \
	opx/sdi_sys_common.h \
	opx/sdi_thermal_internal.h
